--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: 'Inter', 'sans-serif';
+  background-color: black;
 }
 
 @font-face {
@@ -34,4 +34,20 @@ body {
 @font-face {
   font-family: 'gesist-black';
   src: url('/fonts/Geist-Black-BF6569491cec591.otf');
+}
+
+/* =======> drawer style */
+.drawer {
+  width: 50% !important;
+  background-color: #101014 !important;
+}
+@media screen and (max-width: 700px) {
+  .drawer {
+    width: 70% !important;
+  }
+}
+@media screen and (max-width: 500px) {
+  .drawer {
+    width: 100% !important;
+  }
 }
